src/bin/snapshots/snapshots__Generics.comma.error.input.snap
---
created: "2019-08-25T02:12:18.060129095Z"
creator: insta@0.7.4
source: src/bin/snapshots.rs
expression: forest
---
Err(
    ParseError {
        at: Span,
        expected: [
            IDENT,
            "#",
            LIFETIME,
            ">",
        ],
    },
)
