src/bin/snapshots/snapshots__Generics.empty.input.snap
---
created: "2019-06-02T16:25:08.496385Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    Generics {
        params: [],
    },
)
