src/bin/snapshots/snapshots__Generics.lifetime-special.input.snap
---
created: "2019-06-02T16:34:06.678037Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    Generics {
        params: [
            GenericParam {
                attrs: [],
                kind: GenericParamKind::Lifetime {
                    name: _,
                },
            },
            GenericParam {
                attrs: [],
                kind: GenericParamKind::Lifetime {
                    name: _,
                },
            },
            GenericParam {
                attrs: [],
                kind: GenericParamKind::Lifetime {
                    name: _,
                },
            },
        ],
    },
)
