src/bin/snapshots/snapshots__ModuleContents.hello-world.input.snap
---
created: "2019-05-23T21:43:46.020208Z"
creator: insta@0.7.4
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    ModuleContents {
        attrs: [],
        items: [
            Item {
                attrs: [],
                kind: ItemKind::Fn {
                    header: FnHeader,
                    decl: FnDecl {
                        name: _,
                    },
                    body: Block {
                        attrs: [],
                        stmts: [
                            Stmt::Expr(
                                Expr {
                                    attrs: [],
                                    kind: ExprKind::Path(
                                        QPath::Unqualified(
                                            Path {
                                                path: RelativePath {
                                                    segments: [
                                                        PathSegment {
                                                            ident: _,
                                                        },
                                                    ],
                                                },
                                            },
                                        ),
                                    ),
                                },
                            ),
                            Stmt::Expr(
                                Expr {
                                    attrs: [],
                                    kind: ExprKind::Unary {
                                        expr: Expr {
                                            attrs: [],
                                            kind: ExprKind::Paren {
                                                attrs: [],
                                                expr: Expr {
                                                    attrs: [],
                                                    kind: ExprKind::Literal,
                                                },
                                            } | ExprKind::Tuple {
                                                attrs: [],
                                                exprs: [
                                                    Expr {
                                                        attrs: [],
                                                        kind: ExprKind::Literal,
                                                    },
                                                ],
                                            },
                                        },
                                        op: UnaryOp::Not,
                                    },
                                },
                            ),
                            Stmt::Semi,
                        ] | [
                            Stmt::Expr(
                                Expr {
                                    attrs: [],
                                    kind: ExprKind::MacroCall(
                                        MacroCall {
                                            path: Path {
                                                path: RelativePath {
                                                    segments: [
                                                        PathSegment {
                                                            ident: _,
                                                        },
                                                    ],
                                                },
                                            },
                                            input: _,
                                        },
                                    ),
                                },
                            ),
                            Stmt::Semi,
                        ] | [
                            Stmt::Item(
                                Item {
                                    attrs: [],
                                    kind: ItemKind::MacroCall(
                                        ItemMacroCall {
                                            path: Path {
                                                path: RelativePath {
                                                    segments: [
                                                        PathSegment {
                                                            ident: _,
                                                        },
                                                    ],
                                                },
                                            },
                                            input: _,
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                },
            },
        ],
    },
)
