src/bin/snapshots/snapshots__Type.dyn-2015.input.snap
---
created: "2019-06-02T16:59:10.376024Z"
creator: insta@0.8.1
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    Type::DynTrait {
        bounds: [
            TypeBound::Trait(
                TypeTraitBound {
                    path: Path {
                        path: RelativePath {
                            segments: [
                                PathSegment {
                                    ident: _,
                                },
                            ],
                        },
                    },
                },
            ),
        ],
    },
)
