src/bin/snapshots/snapshots__WhereClause.bare.input.snap
---
created: "2019-05-30T20:31:06.284810Z"
creator: insta@0.7.4
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    WhereClause {
        bounds: [],
    },
)
